apps/llama-cpp/deepseek-flash/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek-flash
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: rpc
      port: 50052
      targetPort: rpc
  selector:
    app.kubernetes.io/instance: deepseek-flash
    app.kubernetes.io/name: deepseek-flash
