apps/llama-cpp/deepseek-flash/base/netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deepseek-flash
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: deepseek-flash-rpc-server
      ports:
        - port: rpc
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: deepseek-flash
      app.kubernetes.io/name: deepseek-flash
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deepseek-flash-rpc-server
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: deepseek-flash
      ports:
        - port: rpc
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: deepseek-flash-rpc-server
      app.kubernetes.io/name: deepseek-flash-rpc-server
  policyTypes:
    - Ingress
